--- a/examples/tutorial/basic-0/package.json
+++ b/examples/tutorial/basic-0/package.json
@@ -15,5 +15,9 @@
   },
   "scripts": {
     "test": "anchor test"
+  },
+  "dependencies": {
+    "@project-serum/common": "^0.0.1-beta.3",
+    "@solana/spl-token": "^0.1.8"
   }
 }
