--- a/examples/tutorial/basic-0/programs/basic-0/Cargo.toml
+++ b/examples/tutorial/basic-0/programs/basic-0/Cargo.toml
@@ -13,4 +13,8 @@ no-entrypoint = []
 cpi = ["no-entrypoint"]
 
 [dependencies]
-anchor-lang = { path = "../../../../../lang" }
+anchor-lang = "0.19.0"
+anchor-spl = "0.19.0"
+anchor-spl-token = "0.18.12"
+
+
